--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "inspect:watch": "nodemon"
   },
   "dependencies": {
+    "@google/maps": "^1.0.2",
     "@meanie/mongoose-to-json": "^2.4.0",
+    "@types/google__maps": "^0.5.8",
     "@types/socket.io": "^2.1.3",
     "async": "^3.0.1",
     "bcrypt-nodejs": "^0.0.3",
@@ -42,6 +44,7 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.0.1",
     "fbgraph": "^1.4.4",
+    "google-distance-matrix": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.13",
     "lusca": "^1.6.1",
