--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "rxjs": "^6.5.4",
     "socket.io": "^2.3.0",
     "socketio-jwt-auth": "^0.1.0",
     "winston": "^2.4.2"
