--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.13",
     "lusca": "^1.6.1",
     "mongoose": "^5.6.0",
+    "mongoose-autopopulate": "^0.12.1",
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
@@ -83,6 +84,7 @@
     "@types/lusca": "^1.6.0",
     "@types/mongodb": "^3.1.28",
     "@types/mongoose": "^5.5.6",
+    "@types/mongoose-autopopulate": "^0.10.0",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.10",
     "@types/nodemailer": "^6.2.0",
